updated html and css

--- a/P1_requirements_57.html
+++ b/P1_requirements_57.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="style.css">
     <title>P1: Prosjekt Henrik</title>
     <meta charset="UTF-8">
+    
 </head>
 
 <body>
     <header>
+        <a href="P1_requirements_57.html"><img src="logga.png" alt="henrik-logga"></a>
         <h1>P1: Prosjekt Henrik</h1>
         <h2>Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</h2>
     </header>
@@ -28,17 +30,21 @@
     <p>
         Denne interessegruppen jobber med å fronte navnet Henrik, kakebaking og glede! Dette har vi lyst å hjelpe dem med,
         ved å lage en bedre og mer fungerende nettside. Henrik interessegruppe er en del av Online.ntnu.no sine nettsider,
-        dette er en veldig enkel og lite opplysende nettside om Henrik, dette vil vi være med på å forbedre.
-        Nettsiden vi skal lage for dem vil hjelpe å fronte navne Henrik, gjøre navnet enda mer anerkjent
-        rundt i verden og skape et godt rykte. Med tilbakemeldinger og idemyldring fra Henrik gruppen
-        og oss, planlegger vi å lage en nettside som heter «Interessegruppen Henrik».
+        dette er en veldig enkel og lite opplysende nettside om Henrik. Her vil vi strekke ut en hånd, og hjelpe dem med
+        å forbedre nettsiden. Nettsiden vi skal lage for dem vil hjelpe å fronte navne Henrik, gjøre navnet enda mer
+        anerkjent rundt i verden og skape et godt rykte. Med tilbakemeldinger og idemyldring fra Henrik gruppen og
+        oss, planlegger vi å lage en nettside som heter «Interessegruppen Henrik»
+        Hensikten med nettsiden er å spre bevissthet over navnet Henrik, hele verden skal få litt mer informasjon om navnet Henrik.
+        Etter et besøk på Interessegruppen Henrik vil du ha nok informasjon til å holde et kort foredrag om navnet. Her vil du kunne framstille en kort historie om navnet, og vise til minst 3 kjente Henriker gjennom tidene og kanskje kan du til og med kjenne igjen en Henrik, bare utifra et bilde. 
+        Gruppen har eksistert i mer enn ett år og vi skal hjelpe de til nye høyder!
+
     </p>
 
     <h2>4. Målgruppe</h2>
     <p>
-        En typisk bruker vil være enten medlemmer av interessegruppen Henrik eller folk som er interessert i navnet eller gruppen.
-        Dette gjelder nok hovedsakelig informatikkstudenter ved NTNU. Interessegruppen ble startet med et glimt i øyet og er
-        ganske uformell og lite selvhøytidelig. Nettsiden trenger altså ikke være veldig formell. Gruppens behov er å
+        En typisk bruker vil være enten medlemmer av interessegruppen Henrik eller folk som er interessert i navnet eller gruppen. Dette gjelder nok
+        hovedsakelig informatikkstudenter ved NTNU. Interessegruppen ble startet med et glimt i øyet og de er ganske uformell og lite
+        selvhøytidelig. Nettsiden trenger altså ikke være veldig formell. Gruppens behov er å
         <a href="https://online.ntnu.no/wiki/online/info/innsikt-og-interface/interessegrupper/henrik/" target="_blank">«fronte navnet Henrik»</a>.
     </p>
 
