--- a/P1/P1_requirements_57.html
+++ b/P1/P1_requirements_57.html
@@ -29,7 +29,7 @@
 
 		<h2>Formål</h2>
 		<p>
-			Denne interessegruppen jobber med å fronte navnet Henrik. Dette har vi lyst å hjelpe dem med, ved å lage en 
+			Denne interessegruppen jobber med å <a href="https://online.ntnu.no/wiki/online/info/innsikt-og-interface/interessegrupper/henrik/" target="_blank">fronte navnet Henrik.</a> Dette har vi lyst å hjelpe dem med, ved å lage en 
 			bedre og mer fungerende nettside. Henrik interessegruppe er en del av Online.ntnu.no sine nettsider, dette er 
 			en veldig enkel og lite opplysende nettside om Henrik. Her vil vi strekke ut en hånd, og hjelpe dem med å 
 			forbedre nettsiden. Nettsiden vi skal lage for dem vil hjelpe å fronte navne Henrik, gjøre navnet enda mer 
@@ -41,7 +41,6 @@
 			nok informasjon til å holde et kort foredrag om navnet. Du vil sitte igjen med kunnskap om navnets opphav og 
 			historie, du vil kunne vise til minst 3 kjente Henriker gjennom tidene og kanskje Henrikferdighetene vil la deg 
 			kjenne igjen en Henrik bare utifra et bilde?
-			Gruppens behov er å <a href="https://online.ntnu.no/wiki/online/info/innsikt-og-interface/interessegrupper/henrik/" target="_blank">«fronte navnet Henrik»</a>.
 		</p>
 
 
@@ -56,7 +55,7 @@
 
 
 		<h2>Innhold</h2>
-		<h3>Ting vi tar med om vi har kapasitet</h3>
+		<h3>Ting vi vi garantert har med</h3>
 		<h4> Forside </h4>
 		<p>
 			Denne delen av nettsiden skal gi brukerne et grovt inntrykk av hva de kan forvente av nettsiden vår. 
@@ -64,7 +63,7 @@
 			oppmerksomheten til brukeren. Derfor er det viktig at designet er enkelt og konsist, men også fengende og 
 			besnærende. Det er også et poeng at dette vil være brukernes første møte med konseptet vårt, derfor er det 
 			viktig at den skal se profesjonelt ut og være visuelt tilfredsstillende. Vi skal også ha en header og en 
-			footer som er lik gjennom hele nettsida, der header linke brukere til alle de andre sidene, mens footer 
+			footer som er lik gjennom hele nettsida, der header linker brukere til alle de andre sidene, mens footer 
 			inneholder kontaktinformasjon. 
 		</p>
 		
@@ -87,7 +86,7 @@
 			følgende window.confirm() boksen, vil et innmeldingsskjema(et html form) dukke opp. 
 		</p>
 		
-		<h3>Ting vi tar med om vi har kapasitet</h3>
+		<h3>Ting vi har med om vi har kapasitet</h3>
 		<h4>Henrik or not</h4>
 		<p>
 			Dette vil være en test der man kan sjekke hvor god man er til å gjenkjenne en Henrik. Brukeren vil få vist en 
@@ -110,7 +109,7 @@
 			<li>Brukeren skal kunne lære om navnet Henrik</li>
 		</ul>
 		
-		<p>Ufunksjonelle krav</p>
+		<p>Ikke funksjonelle krav</p>
 		<ul>
 			<li>Alle sider skal kunne nås fra navigasjonsbaren</li>
 			<li>Alle sidene skal lastes innen 2 sekunder</li>
@@ -123,7 +122,7 @@
 		<p>Når vi er ferdig, kommer nettsiden til å ligge på: <a href="http://folk.ntnu.no/danielax/" target="blank">http://folk.ntnu.no/danielax/</a>.
     </article>
     <footer>
-        <p>Website by Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</p>
+        <p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</p>
     </footer>
 </body>
 </html>
