updated html and css

--- a/P1/P1_requirements_57.html
+++ b/P1/P1_requirements_57.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-		<img id="logo" src="logo.png" alt="henrik-logo">
-        <h1>P1: Prosjekt Henrik</h1>
+		<a href="P1_requirements_57.html"><img id="logo" src="logo.png" alt="henrik-logo"></a>
+        <a href="P1_requirements_57.html"><h1>P1: Prosjekt Henrik</h1></a>
         <h4>Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</h4>
 		<p>20.09.2020</p>
     </header>
@@ -30,7 +30,7 @@
 			en veldig grunnleggende og kjederlig. Her vil vi strekke ut en hånd, og hjelpe dem med å 
 			forbedre nettsiden. Nettsiden vi skal lage for dem vil hjelpe å fronte navne Henrik, gjøre navnet enda mer 
 			anerkjent og skape et godt rykte. Med tilbakemeldinger og idemyldring fra Henrik-gruppen og oss, 
-			planlegger vi å lage en nettside som heter «Interessegruppen Henrik”												
+			planlegger vi å lage en nettside som heter «Interessegruppen Henrik»												
 		</p>
 		<p>
 			Selve hensikten med nettsiden er å spre bevissthet over navnet Henrik. Etter et besøk på nettsiden vil du ha 
