Ferdig med P2 ish(Daniel må fortsatt fiks linkan og mockup bildan, men untatt det e vi good)

--- a/P1/P1_requirements_57.html
+++ b/P1/P1_requirements_57.html
@@ -118,7 +118,7 @@
 		<p>Når vi er ferdig kommer nettsiden til å ligge på: <a href="http://folk.ntnu.no/danielax/" target="blank">http://folk.ntnu.no/danielax/</a>.
     </article>
     <footer>
-        <p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</p>
+        <p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
     </footer>
 </body>
 </html>
