--- a/P2/P2_design_57.html
+++ b/P2/P2_design_57.html
@@ -8,12 +8,28 @@
 </head>
 <body>
     <header>
-		<a href="P1_requirements_57.html"><img id="logo" src="logo.png" alt="henrik-logo"></a>
-        <a href="P1_requirements_57.html"><h1>P1: Prosjekt Henrik</h1></a>
+		<a href="P2_design_57.html"><img id="logo" src="logo.png" alt="henrik-logo"></a>
+        <a href="P2_design_57.html"><h1>P2: Prosjekt Henrik</h1></a>
         <h4>Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</h4>
 		<p>02.10.2020</p>
     </header>
 	<article>
+		<h2>Klient</h2>
+		<p>
+			Klienten vi har valgt å jobbe med er interessegruppen Henrik. Vi har prøvd å ta kontakt med forskjellige 
+			medlemmer av denne interessegruppen, men siden ingen av dem virket spesielt entusiastiske, har vi valgt å 
+			behandle dem som en fiktiv klient. 
+		</p>
+		
+		<h2>Formål</h2>
+		<p>Vårt mål med denne nettsiden er å hjelpe Henrik interessegruppen med å fronte navnet Henrik. Vi vil hjelpe dem med å 
+		forbedre nettsiden deres, til noe som er  mer fungerende og fengende. En bedre nettside vil hjelpe dem med å fronte navnet 
+		henrik, gjøre navnet mer anerkjent og skape et godt rykte. Etter et besøk på nettsiden vil du sitte igjen med diverse 
+		kunnskaper om navnet Henrik, mer enn du visste fra før. Interessegruppen ble startet med et glimt i øyet og de er ganske 
+		uformelle og lite selvhøytidelige. Nettsiden trenger altså ikke være veldig formell. En typisk bruker av nettsiden vil enten 
+		være medlemmer av interessegruppen Henrik, folk som er interessert i navnet, eller informatikkstudenter ved NTNU som på en 
+		eller annen måte har oppdaget gruppen.</p>
+		
 		<h2>Navigasjon</h2>
 		<p>Nettsiden skal være enkel å navigere seg gjennom. Dette er fordi den primære funksjonen er å fange interessen til 
 		brukeren, og potensielt holde brukeren på nettsiden, forhåpentligvis lenge nok til at brukeren har bevissthet over navnet 
@@ -23,7 +39,33 @@
 		<p>Forsiden/hovedsiden vår skal gi en kort oversikt over hva de kan forvente av nettsiden. Det vil informere om innholdet 
 		vårt og dermed fungere som en veiledning til alle sidene. Det vil også gi et grovt innblikk i diverse ting, som «Om Henrik 
 		interessegruppen».</p>
-
+		
+		<h2>Sideoppsett og utseende</h2>
+		<p>Nettsiden kommer bestå av ulike nyanser av blå og gul. Gul kommer huvudsakligen finnes i teksten i headeren, og i logoen.</p>
+		<ul>
+			<li>font<ul>
+				<li>Vi har gått gjennom mange alternativer for skrifttype, og har funnet en som er både innbydende å se på 
+				og lett å lese. Vi har også funnet at siden får en mer organisert og oversiktlig struktur om vi har to kolonner.</li>
+			</ul></li>
+			<li>navbar design og posisjon<ul>
+				<li>Headeren kommer til å være ganske høy, med blå bakgrunn, med Henrik logoen midt på. Når man klikker på den, 
+				kommer man til startsiden. Navbaren har et enkelt design, med “Henrik”-gule streker som deler opp nedre delen av 
+				den blå bakgrunnen i seksjoner. De gule strekene går ikke hele veien fra kant til kant, for å gi et friskt inntrykk.</li>
+			</ul></li>
+			<li>farger<ul>
+				<li>Fargene komme til å være gul og blå, i nyanser som vi tar fra Henrik-logoen (som vi i vår tur har fått fra den 
+				“ekte” Henrik-siden på Online sin nettside).</li>
+			</ul></li>
+			<li>footer<ul>
+				<li>Footeren vil være “Henrik-gul” tekst mot en smal, blå bakgrunn.</li>
+			</ul></li>
+			<li>favicon<ul>
+				<li>henrik-logoen</li>
+			</ul></li>
+		</ul>
+		<p>Designet gjør nettsiden enkel å lese, og er meint å gi et minimalistisk, men lekfullt inntrykk, som godt beskriver 
+		målet med siden.</p>
+		
 		<h2>Innhold</h2>
 		<h3>Ting vi vi garantert har med</h3>
 		<h4>Forside</h4>
@@ -85,36 +127,36 @@
 		Interessegruppen som en “Henrik-kjenner”  For å oppnå dette vil vi bruke et slideshow hvis det fungerer godt, eller så vil 
 		vi ha hvert bilde med radio buttons ved siden av for å avgi svar. Uansett vil vi under ha en avgi svar knapp.</p>
 		
-		<h2>Side oppsett og utseende</h2>
-		<p>Nettsiden kommer bestå av ulike nyanser av blå og gul. Gul kommer huvudsakligen finnes i teksten i headeren, og i logoen.</p>
-		<ul>
-			<li>font<ul>
-				<li>Vi har gått gjennom mange alternativer for skrifttype, og har funnet en som er både innbydende å se på 
-				og lett å lese. Vi har også funnet at siden får en mer organisert og oversiktlig struktur om vi har to kolonner.</li>
-			</ul></li>
-			<li>navbar design og posisjon<ul>
-				<li>Headeren kommer til å være ganske høy, med blå bakgrunn, med Henrik logoen midt på. Når man klikker på den, 
-				kommer man til startsiden. Navbaren har et enkelt design, med “Henrik”-gule streker som deler opp nedre delen av 
-				den blå bakgrunnen i seksjoner. De gule strekene går ikke hele veien fra kant til kant, for å gi et friskt inntrykk.</li>
-			</ul></li>
-			<li>farger<ul>
-				<li>Fargene komme til å være gul og blå, i nyanser som vi tar fra Henrik-logoen (som vi i vår tur har fått fra den 
-				“ekte” Henrik-siden på Online sin nettside).</li>
-			</ul></li>
-			<li>footer<ul>
-				<li>Footeren vil være “Henrik-gul” tekst mot en smal, blå bakgrunn.</li>
-			</ul></li>
-			<li>favicon<ul>
-				<li>henrik-logoen</li>
-			</ul></li>
-		</ul>
-		<p>Designet gjør nettsiden enkel å lese, og er meint å gi et minimalistisk, men lekfullt inntrykk, som godt beskriver 
-		målet med siden.</p>
-		
+		<h2>Minstekrav</h2>
+		<p>Vi vil sannsynligvis ha mest javascript på innmeldingsskjemaet. Først skal vi ha to knapper ved siden av hverandre, der 
+		brukeren kan bekrefte enten at de heter Henrik, eller at de identifiserer seg som en Henrik. Når brukeren har krysset av 
+		ett av de to svaralternativene dukker skjemaet opp, for eksempel ved at man via javascript endrer display property av form 
+		elementet.</p>
+		<p>På innmeldingsskjemaet skal vi ha en send-knapp som skal gjøre html form validation, altså sjekke at brukeren har fylt inn 
+		alt det obligatoriske, og gitt gyldige svar(at alder er et tall større enn null og mindre enn verdens eldste person o.l.), og 
+		hvis det er gyldig utfylt, vil det være en knapp der javascripten fyller inn mailto informasjonen i en link, slik at brukeren 
+		kan sende svarene sine via epost. Her kan vi også lage en knapp som bare tømmer hele skjemaet.</p>
+		<p>Vi vil også gjerne bruke javascript på etymologisiden, for der vil gjøre det slik at når brukeren holder musepekeren over 
+		ett navn, vil det spilles av en uttaleguide for det navnet. Dette vil vi oppnå ved å bruke onmouseover property til å kalle 
+		på en funksjon, som bruker javascript for å spille av et skjult html audio element. Vi har testet at dette fungerer til tross 
+		for at audio elementet har display: none!</p>
+		<p>Om vi ender opp med å lage Henrik or Not blir det selvfølgelig en del javascript der også, men det virker ikke spesielt 
+		komplisert. Da trenger vi bare at koden skal produsere en score som den så setter på bunnen etter brukeren trykker sjekk 
+		svar. Det hadde også vært mulig å endre bakgrunnen til enten rød eller grønn, basert på om svarene er riktige eller gale. 
+		Så skal den sette inn en prosent som indikerer hvor bra brukeren gjorde det, og kanskje til og med dukker det opp en stor 
+		bokstav(A, B, C), som indikerer hvilken karakter brukeren hadde fått ut ifra hvor mange rette svar de har. </p>
+		<p>Om vi ender opp med å lage Sitater av Henrik kommer vi til å gjøre det på denne måten. Vi definerer en todimensjonal 
+		array i javascript som inneholder hvilken Henrik som er kreditert sitatet, og deretter hva sitater er. Deretter vil 
+		sitatene dukke opp med formatering via å endre htmlen med .innerHTML. Vi kan også bruke .onLoad() for å kjøre koden med en 
+		gang brukeren laster inn nettsiden, slik at den ikkje blir så tom, og når brukeren trykker hvor som helst på siden 
+		erstattes sitatet med et annet ett.</p>
 		
 		
 		<h2>Oppsett</h2>
-		<p></p>
+		<p>For å fordele ansvaret over de forskjellige deloppgavene som må utføres for å lage denne nettsiden, har vi laget et 
+		regneark som deler inn ansvar etter filer. Vi har fordelt ansvaret slik at det er en hovedansvarlig per fil. De som er 
+		oppført som hovedansvarlig skal ikke alene utføre alle oppgaver knyttet til filen, men de har ansvaret for at filen blir 
+		ferdig i tide. Her følger en oversikt over mappestrukturen, sammen med et utklipp av det nevnte regnearket.</p>
 		<ul>
 			<li>index.html</li>
 			<li>historiske_henriker.html</li>
@@ -143,9 +185,12 @@
 			</ul></li>
 		</ul>
 		<img src="img/tidsfrister.jpg">
+		
+		<h2>Nettsidens URL</h2>
+		<p>Når vi er ferdig kommer denne nettsiden til å ligge på: <a href="http://folk.ntnu.no/danielax/" target="blank">http://folk.ntnu.no/danielax/</a>.
 	</article>
     <footer>
-        <p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien, og Morten Tobias Rinde Sunde</p>
+        <p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
     </footer>
 </body>
 </html>
