--- a/P2/P2_design_57.html
+++ b/P2/P2_design_57.html
@@ -41,30 +41,20 @@
 		interessegruppen».</p>
 		
 		<h2>Sideoppsett og utseende</h2>
-		<p>Nettsiden kommer bestå av ulike nyanser av blå og gul. Gul kommer huvudsakligen finnes i teksten i headeren, og i logoen.</p>
-		<ul>
-			<li>font<ul>
-				<li>Vi har gått gjennom mange alternativer for skrifttype, og har funnet en som er både innbydende å se på 
-				og lett å lese. Vi har også funnet at siden får en mer organisert og oversiktlig struktur om vi har to kolonner.</li>
-			</ul></li>
-			<li>navbar design og posisjon<ul>
-				<li>Headeren kommer til å være ganske høy, med blå bakgrunn, med Henrik logoen midt på. Når man klikker på den, 
-				kommer man til startsiden. Navbaren har et enkelt design, med “Henrik”-gule streker som deler opp nedre delen av 
-				den blå bakgrunnen i seksjoner. De gule strekene går ikke hele veien fra kant til kant, for å gi et friskt inntrykk.</li>
-			</ul></li>
-			<li>farger<ul>
-				<li>Fargene komme til å være gul og blå, i nyanser som vi tar fra Henrik-logoen (som vi i vår tur har fått fra den 
-				“ekte” Henrik-siden på Online sin nettside).</li>
-			</ul></li>
-			<li>footer<ul>
-				<li>Footeren vil være “Henrik-gul” tekst mot en smal, blå bakgrunn.</li>
-			</ul></li>
-			<li>favicon<ul>
-				<li>henrik-logoen</li>
-			</ul></li>
-		</ul>
-		<p>Designet gjør nettsiden enkel å lese, og er meint å gi et minimalistisk, men lekfullt inntrykk, som godt beskriver 
-		målet med siden.</p>
+		<p>Bagrunnen på siden vil være svakt grå, noe som passer veldig fint med "Henrik-fargene" som nevns litt senere i denne tekst. 
+			Vi har gått gjennom mange alternativer for skrifttype, og har funnet en som er både innbydende å se på og lett å lese.
+			Den heter “Bodoni 72 smallcaps book” for headers og navbar, og “Bodoni 72 Oldstyle Book” for all annen tekst. Størrelsen
+			på teksten vil være 70 for headeren på siden, 50 på navbaren, og 40 for resten av siden. Vi har også funnet at siden får
+			en mer organisert og oversiktlig struktur om vi har to kolonner på sider med mye tekst. Fargene på siden komme til å
+			være gul og blå, i nyanser som vi tar fra Henrik-logoen (som vi i vår tur har fått fra den “ekte” Henrik-siden på
+			Online sin nettside). Tekst i paragrafer kommer til å være svart. Headeren kommer til å være ganske høy, med blå bakgrunn,
+			med Henrik logoen midt på. Når man klikker på den, kommer man til startsiden. Navbaren har et enkelt design, med “Henrik”-gule
+			streker som deler opp nedre delen av den blå bakgrunnen i seksjoner. De gule strekene går ikke hele veien fra kant til kant,
+			for å gi et friskt inntrykk. Footeren vil være “Henrik-gul” tekst mot en smal, blå bakgrunn. Designet gjør nettsiden enkel
+			å lese, og er meint å gi et minimalistisk, men lekfullt inntrykk, som godt beskriver målet med siden.</p>
+			<p>Her er en bilde som viser nettsidens universale element, som header, navbar, footer, farger og font:</p>
+			<img width="600px" src="img/Mockups/mockup4.png">
+		</p>
 		
 		<h2>Innhold</h2>
 		<h3>Ting vi vi garantert har med</h3>
@@ -75,6 +65,7 @@
 		skal vi oppnå gjennom et enkelt og minimalt, men likevel gripende, design. Forsiden skal inneholde en tekst som skal, på en 
 		så konsis måte som mulig, gi brukerne nok informasjon til at de ønsker å utforske siden videre. Vi vil sikte på å plassere 
 		denne teksten lenger nede på nettsiden for å gjøre forsiden enkel og oversiktlig.</p>
+		<img width="600px" src="img/Mockups/mockup1.png">
 		
 		<h4>Etymologi</h4>
 		<p>Målet med denne teksten er at vi skal uttrykke mye av navnets historie, og hvordan navnet har endt opp i dag. Her har vi 
@@ -90,6 +81,7 @@
 		etternavnene som Henriksen og Hendriksen. Navnet var ikke alltid vanlig i norge, det ble mer og mer vanlig navn i Norge og 
 		Sverige rundt 1200-tallet. I middelalderen var det et helt vanlig navn, og det har verdt populært lenge, og etter ett lite 
 		fall i bruk av navnet, tok det seg opp og ble populært igjen i 1990.</p>
+		<img width="600px" src="img/Mockups/mockup2.png">
 		
 		<h4>Historiske Henriker</h4>
 		<p>Målet med denne siden er at leserne skal kjenne til og kunne greie ut om noen av historiens viktigste Henriker. 
@@ -103,6 +95,7 @@
 			elever på videregående den dag i dag. Ettersom målgruppen allerede kjenner Ibsen er det ingen grunn til å gå for nøye 
 			til verks her. </li>
 		</ul>
+		<img width="600px" src="img/Mockups/mockup3.png">
 		
 		<h4>Bli en Henrik i dag</h4>
 		<p>Hovedattraksjonen her skal være et enkelt HTML skjema som kunne blitt brukt for å registrere medlemmer av 
@@ -112,6 +105,7 @@
 		<p>Et felt kan også være ikke-redigerbart, og bestemt av hvordan brukeren kom seg på nettsiden. Der vil det enten stå 
 		“ekte Henrik” eller “Henrik på innsiden” eller om de fikk 100% på Henrik or Not kan de linkes til denne siden og da 
 		hadde det stått “Henrik-kjenner”, ved å sette.</p>
+		<img width="600px" src="img/Mockups/mockup6.png">
 				
 		<h3>Ting vi har med om vi har kapasitet</h3>
 		<h4>Henrik or Not</h4>
@@ -119,6 +113,7 @@
 		denne personen er en Henrik. Om de får 100% på testen skal det åpnes en ny side der de kan melde seg inn i Henrik 
 		Interessegruppen som en “Henrik-kjenner”  For å oppnå dette vil vi bruke et slideshow hvis det fungerer godt, eller så vil 
 		vi ha hvert bilde med radio buttons ved siden av for å avgi svar. Uansett vil vi under ha en avgi svar knapp.</p>
+		<img height="400" src="img/Mockups/mockup5.png">
 		
 		
 		<h4>Sitat av Henrik</h4>
@@ -126,7 +121,8 @@
 		denne personen er en Henrik. Om de får 100% på testen skal det åpnes en ny side der de kan melde seg inn i Henrik 
 		Interessegruppen som en “Henrik-kjenner”  For å oppnå dette vil vi bruke et slideshow hvis det fungerer godt, eller så vil 
 		vi ha hvert bilde med radio buttons ved siden av for å avgi svar. Uansett vil vi under ha en avgi svar knapp.</p>
-		
+		<img width="600px" src="img/Mockups/mockup7.png">
+
 		<h2>Minstekrav</h2>
 		<p>Vi vil sannsynligvis ha mest javascript på innmeldingsskjemaet. Først skal vi ha to knapper ved siden av hverandre, der 
 		brukeren kan bekrefte enten at de heter Henrik, eller at de identifiserer seg som en Henrik. Når brukeren har krysset av 
@@ -150,6 +146,7 @@
 		sitatene dukke opp med formatering via å endre htmlen med .innerHTML. Vi kan også bruke .onLoad() for å kjøre koden med en 
 		gang brukeren laster inn nettsiden, slik at den ikkje blir så tom, og når brukeren trykker hvor som helst på siden 
 		erstattes sitatet med et annet ett.</p>
+
 		
 		
 		<h2>Oppsett</h2>
@@ -187,7 +184,7 @@
 		<img src="img/tidsfrister.jpg">
 		
 		<h2>Nettsidens URL</h2>
-		<p>Når vi er ferdig kommer denne nettsiden til å ligge på: <a href="http://folk.ntnu.no/danielax/" target="blank">http://folk.ntnu.no/danielax/</a>.
+		<p>Når vi er ferdig kommer denne nettsiden til å ligge på: <a href="http://folk.ntnu.no/danielax/" target="_blank">http://folk.ntnu.no/danielax/</a>.
 	</article>
     <footer>
         <p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
