Did the p3 design for main page

--- a/P3/template.html
+++ b/P3/template.html
@@ -13,15 +13,25 @@
 		<a href="P2_design_57.html"><img id="logo" src="logo.png" alt="henrik-logo"><h1>Henrik</h1></a>
 		<nav>
 			<a href="index.html">Forside</a>
+			<div></div>
 			<a href="etymology.html">Etymologi</a>
+			
+			<div></div>
 			<a href="bli_en_henrik.html">Bli en Henrik</a>
+			
+			<div></div>
 			<a href="historical_henriks.html">Historiske Henriker</a>
+			
+			<div></div>
 			<a href="henrik_or_not.html">Henrik or not?</a>
+			
+			<div></div>
 			<a href="sitater.html">Sitater</a>
 		</nav>
 	</header>
 	
 	<article>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</article>
 
     <footer>
