Fikset noen lenker i template.html

--- a/P3/template.html
+++ b/P3/template.html
@@ -14,13 +14,13 @@
 		<nav>
 			<a href="index.html">Forside</a>
 			<div></div>
-			<a href="etymology.html">Etymologi</a>
+			<a href="etymylogi.html">Etymologi</a>
 			
 			<div></div>
 			<a href="bli_en_henrik.html">Bli en Henrik</a>
 			
 			<div></div>
-			<a href="historical_henriks.html">Historiske Henriker</a>
+			<a href="historiske_henriker.html">Historiske Henriker</a>
 			
 			<div></div>
 			<a href="henrik_or_not.html">Henrik or not?</a>
