Fiksa litt på template og sånnt, og jobba med bli en henrik

--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="no">
-
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>P2: Prosjekt Henrik</title>
-	<link rel="icon" href="logo.png" type="image/png">
+    <title>P3: Prosjekt Henrik</title>
+	<link rel="icon" href="logo.png" type="image/logo.png">
 </head>
-
 <body>
     <header>
-		<a href="P2_design_57.html"><img id="logo" src="logo.png" alt="henrik-logo"><h1>Henrik</h1></a>
+		<a href="index.html"><img id="logo" src="media/images/logo.png" alt="henrik-logo"><h1>Henrik</h1></a>
 		<nav>
-			<a href="index.html">Forside</a>
-			<div></div>
-			<a href="etymylogi.html">Etymologi</a>
-			
-			<div></div>
-			<a href="bli_en_henrik.html">Bli en Henrik</a>
-			
-			<div></div>
-			<a href="historiske_henriker.html">Historiske Henriker</a>
-			
-			<div></div>
-			<a href="henrik_or_not.html">Henrik or not?</a>
-			
-			<div></div>
+			<a href="index.html">Forside</a><div></div>
+			<a href="etymylogi.html">Etymologi</a><div></div>
+			<a href="bli_en_henrik.html">Bli en Henrik</a><div></div>
+			<a href="historiske_henriker.html">Historiske Henriker</a><div></div>
+			<a href="henrik_or_not.html">Henrik or not?</a><div></div>
 			<a href="sitater.html">Sitater</a>
 		</nav>
 	</header>
 	
 	<article>
-        <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>   -->
         <h1>Historiens viktigste Henriker</h1>
         <div class="slides">
             
