la til mp3 på hendrix-sliden

--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -77,6 +77,10 @@
             <p> 
                 Alkohol og narkotika gjorde ham veldig hissig. Ifølge vennen Sharon Lawrence: liquor "set off a bottled-up anger, a destructive fury he almost never displayed otherwise". Han ble arrestert for en slåsskamp i Gøteborg, knuste en vodkaflaske mot fjeset til kjæresten og andre ting. En gang ble han også visstnok kidnappet. Han forsvant etter et show for å sniffe kokain med en fremmed. Manageren fikk senere telefon om å gi kontrakten i bytte mot løslatelsen av Hendrix. Manageren nektet men hyrte folk til å finne Hendrix. Merkelig nok ble han så funnet uskadd i en leilighet og det var slutten på den historien. Hendrix var også flink til å spille gitar.  </p>
                 <img src="media/images/historiske_henriker_images/jimi_hendrix.jpg" alt="heh">
+                <audio controls>
+                    <source src="media/sound_files/hendrix.mp3" type="audio/mp3">
+                  Your browser does not support the audio element.
+                  </audio> 
             </div>
 
             <a class="prev" onclick="newSlide(-1)">&#10094;</a>
