Fiksa Header og footer modularitet via js, og la inn template på alle sidan som ikkje hadd den

--- a/P3/template.html
+++ b/P3/template.html
@@ -4,29 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <title>P3: Prosjekt Henrik</title>
-	<link rel="icon" href="logo.png" type="image/logo.png">
+	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
 </head>
 <body>
-    <header>
-		<a href="index.html"><img id="logo" src="media/images/logo.png" alt="henrik-logo"><h1>Henrik</h1></a>
-		<nav>
-			<a href="index.html">Forside</a><div></div>
-			<a href="etymylogi.html">Etymologi</a><div></div>
-			<a href="bli_en_henrik.html">Bli en Henrik</a><div></div>
-			<a href="historiske_henriker.html">Historiske Henriker</a><div></div>
-			<a href="henrik_or_not.html">Henrik or not?</a><div></div>
-			<a href="sitater.html">Sitater</a>
-		</nav>
-	</header>
-	
 	<article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</article>
-
-    <footer>
-		<p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
-		<!--Lag JS-funksjon som setter footer på bunnen av siden dersom siden er kortere enn skjermehøyden-->
-    </footer>
 </body>
-
 </html>
