--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <title>P3: Prosjekt Henrik</title>
-	<link rel="icon" href="logo.png" type="image/logo.png">
+	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
 </head>
 <body>
-    <header>
-		<a href="index.html"><img id="logo" src="media/images/logo.png" alt="henrik-logo"><h1>Henrik</h1></a>
-		<nav>
-			<a href="index.html">Forside</a><div></div>
-			<a href="etymylogi.html">Etymologi</a><div></div>
-			<a href="bli_en_henrik.html">Bli en Henrik</a><div></div>
-			<a href="historiske_henriker.html">Historiske Henriker</a><div></div>
-			<a href="henrik_or_not.html">Henrik or not?</a><div></div>
-			<a href="sitater.html">Sitater</a>
-		</nav>
-	</header>
 	
 	<article>
         <h2>Historiens viktigste Henriker</h2>  <!-- Gives warning with h1, change to h2 or move outside article works-->
@@ -55,6 +44,7 @@
             </p>
             <img src="media/images/historiske_henriker_images/wergeland.jpg" alt="heh">
         </div>
+		
         <div class="slides">
             <h3>Henrik Ibsen</h3>
             <p> 
@@ -62,8 +52,7 @@
                 </p>
                 <img src="media/images/historiske_henriker_images/ibsen.jpg" alt="heh">
         </div>
-
-        
+		
         <div class="slides">
             <h3>Henrik Bohr</h3>
             <p> 
@@ -87,13 +76,8 @@
             <a class="next" onclick="newSlide(1)">&#10095;</a>
 
             <script src="js/historiske_henriker.js"></script>
-        
 	</article>
-
-    <footer>
-		<p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
-		<!--Lag JS-funksjon som setter footer på bunnen av siden dersom siden er kortere enn skjermehøyden-->
-    </footer>
+	<script src="js/Header and Footer.js"></script>
 </body>
 
 </html>
