glømt å sett inn script taggen

--- a/P3/template.html
+++ b/P3/template.html
@@ -10,5 +10,6 @@
 	<article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</article>
+	<script src="js/Header and Footer.js"></script>
 </body>
 </html>
