--- a/main/sitater.html
+++ b/main/sitater.html
@@ -10,5 +10,6 @@
 	<article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</article>
+	<script src="js/Header and Footer.js"></script>
 </body>
 </html>
