fiksa at det ikke e mellomrom i header footer filnavnet

--- a/P3/template.html
+++ b/P3/template.html
@@ -10,6 +10,6 @@
 	<article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</article>
-	<script src="js/Header and Footer.js"></script>
+	<script src="js/Header_and_Footer.js"></script>
 </body>
 </html>
