--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -7,7 +7,6 @@
 	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
 </head>
 <body>
-	
 	<article>
         <h2>Historiens viktigste Henriker</h2>  <!-- Gives warning with h1, change to h2 or move outside article works-->
         <div class="slides">
@@ -77,7 +76,7 @@
 
             <script src="js/historiske_henriker.js"></script>
 	</article>
-	<script src="js/Header and Footer.js"></script>
+	<script src="js/Header_and_Footer.js"></script>
 </body>
 
 </html>
