--- a/main/etymylogi.html
+++ b/main/etymylogi.html
@@ -10,6 +10,6 @@
 	<article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</article>
-	<script src="js/Header and Footer.js"></script>
+	<script src="js/Header_and_Footer.js"></script>
 </body>
 </html>
