--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -70,9 +70,9 @@
                   Your browser does not support the audio element.
                   </audio> 
             </div>
+            <input type="submit" value= "forrige" class="prev" onclick="newSlide(-1)" >
+            <input type="submit" value= "neste" class="next" onclick="newSlide(1)" >
 
-            <a class="prev" onclick="newSlide(-1)">&#10094;</a>
-            <a class="next" onclick="newSlide(1)">&#10095;</a>
 
             <script src="js/historiske_henriker.js"></script>
 	</article>
