--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -1,15 +1,179 @@
 <!DOCTYPE html>
 <html lang="no">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>P3: Prosjekt Henrik</title>
-	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
+    <title>Henrik | Henrik or not?</title>
+	<link rel="icon" href="media/images/favicon.png" type="image/png">
 </head>
+
 <body>
-	<article>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	</article>
-	<script src="js/Header_and_Footer.js"></script>
+    <header>
+		<a href="P2_design_57.html"><img id="logo" src="media/images/logo.png" alt="henrik-logo"><h1>Henrik</h1></a>
+		<nav>
+			<a href="index.html">Forside</a>
+			<div></div>
+			<a href="etymology.html">Etymologi</a>
+			
+			<div></div>
+			<a href="bli_en_henrik.html">Bli en Henrik</a>
+			
+			<div></div>
+			<a href="historical_henriks.html">Historiske Henriker</a>
+			
+			<div></div>
+			<a href="henrik_or_not.html">Henrik or not?</a>
+			
+			<div></div>
+			<a href="sitater.html">Sitater</a>
+		</nav>
+	</header>
+	
+	<section id="henrik_or_not">
+		<form>
+			<div class="formsection" id="daniel">
+				<img src="media/images/henrik_or_not/daniel.png">
+				<fieldset class="selection">
+					<!--Disse må oppføre seg annerledes når størrelsen er liten-->
+					<label class="checkmark" for="henrik">
+						<input type="radio" id="henrik" name="question" value="henrik">
+						Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="idhenrik">
+						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						Identifiserer som Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						Ikke Henrik
+					</label>
+				</fieldset>
+			</div>
+
+			<br><br>
+
+			<div class="formsection" id="jakob">
+				<img src="media/images/henrik_or_not/jakob.png">
+				<fieldset class="selection">
+					<label class="checkmark" for="henrik">
+						<input type="radio" id="henrik" name="question" value="henrik">
+						Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="idhenrik">
+						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						Identifiserer som Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						Ikke Henrik
+					</label>
+				</fieldset>
+			</div>
+
+			<br><br>
+
+			<div class="formsection" id="thomas">
+				<img src="media/images/henrik_or_not/thomas.png">
+				<fieldset class="selection">
+					<label class="checkmark" for="henrik">
+						<input type="radio" id="henrik" name="question" value="henrik">
+						Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="idhenrik">
+						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						Identifiserer som Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						Ikke Henrik
+					</label>
+				</fieldset>
+			</div>
+
+			<br><br>
+
+			<div class="formsection" id="morten">
+				<img src="media/images/henrik_or_not/morten.png">
+				<fieldset class="selection">
+					<label class="checkmark" for="henrik">
+						<input type="radio" id="henrik" name="question" value="henrik">
+						Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="idhenrik">
+						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						Identifiserer som Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						Ikke Henrik
+					</label>
+				</fieldset>
+			</div>
+
+			<br><br>
+
+			<div class="formsection" id="eyvind">
+				<img src="media/images/henrik_or_not/eyvind.png">
+				<fieldset class="selection">
+					<label class="checkmark" for="henrik">
+						<input type="radio" id="henrik" name="question" value="henrik">
+						Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="idhenrik">
+						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						Identifiserer som Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						Ikke Henrik
+					</label>
+				</fieldset>
+			</div>
+
+			<br><br>
+
+			<div class="formsection" id="rotete">
+				<img src="media/images/henrik_or_not/rotete.png">
+				<fieldset class="selection">
+					<label class="checkmark" for="henrik">
+						<input type="radio" id="henrik" name="question" value="henrik">
+						Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="idhenrik">
+						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						Identifiserer som Henrik
+					</label>
+					<br>
+					<label class="checkmark" for="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						Ikke Henrik
+					</label>
+				</fieldset>
+			</div>
+
+			<input type="submit" value="Henrik-kjenner?">
+
+			<br><br>
+
+		</form>
+	</section>
+
+    <footer>
+		<p>Nettsiden er produsert av Daniel Jan Axlid, Henrik Ytrehus Ågotnes, Thomas Baugerød, Jakob Lien og Morten Tobias Rinde Sunde</p>
+		<!--Lag JS-funksjon som setter footer på bunnen av siden dersom siden er kortere enn skjermehøyden-->
+	</footer>
 </body>
+
 </html>
