Endret alternativ font slik at nettsiden ikke ser dritt ut i Chrome

--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<section id="henrik_or_not">
+	<article id="henrik_or_not">
 		<form>
 			<div class="formsection" id="daniel">
 				<img src="media/images/henrik_or_not/daniel.png">
@@ -149,7 +149,7 @@
 
 
 		</form>
-	</section>
+	</article>
 	<script src="js/henrik_or_not.js"></script>
 
     <footer>
