--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>P3: Prosjekt Henrik</title>
 	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
+	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
 <body>
 	<article>
