la til relevant title på alle sider

--- a/main/bli_en_henrik.html
+++ b/main/bli_en_henrik.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>P3: Prosjekt Henrik</title>
+    <title>Henrik | Bli en Henrik!</title>
 	<link rel="icon" href="media/images/favicon.png" type="image/logo.png">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
