--- a/main/henrik_or_not.html
+++ b/main/henrik_or_not.html
@@ -7,6 +7,7 @@
     <title>Henrik | Henrik or not?</title>
 	<link rel="icon" href="media/images/favicon.png" type="image/png">
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+	<script src="js/henrik_or_not.js"></script>
 </head>
 
 <body>
@@ -17,18 +18,18 @@
 				<fieldset class="selection">
 
 					<!--Disse må oppføre seg annerledes når størrelsen er liten-->
-					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question" value="henrik">
+					<label class="chesdfckmark" for="henrik">
+						<input type="radio" id="henrik" name="question1" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						<input type="radio" id="idhenrik" name="question1" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question1" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -39,17 +40,17 @@
 				<img src="media/images/henrik_or_not/jakob.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question" value="henrik">
+						<input type="radio" id="henrik" name="question2" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						<input type="radio" id="idhenrik" name="question2" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question2" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -61,17 +62,17 @@
 				<img src="media/images/henrik_or_not/thomas.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question" value="henrik">
+						<input type="radio" id="henrik" name="question3" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						<input type="radio" id="idhenrik" name="question3" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question3" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -83,17 +84,17 @@
 				<img src="media/images/henrik_or_not/morten.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question" value="henrik">
+						<input type="radio" id="henrik" name="question4" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						<input type="radio" id="idhenrik" name="question4" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question4" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -104,17 +105,17 @@
 				<img src="media/images/henrik_or_not/eyvind.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question" value="henrik">
+						<input type="radio" id="henrik" name="question5" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						<input type="radio" id="idhenrik" name="question5" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question5" value="ikkehenrik">
 						Ikke Henrik
 					</label>
 				</fieldset>
@@ -126,26 +127,25 @@
 				<img src="media/images/henrik_or_not/rotete.png">
 				<fieldset class="selection">
 					<label class="checkmark" for="henrik">
-						<input type="radio" id="henrik" name="question" value="henrik">
+						<input type="radio" id="henrik" name="question6" value="henrik">
 						Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="idhenrik">
-						<input type="radio" id="idhenrik" name="question" value="idhenrik">
+						<input type="radio" id="idhenrik" name="question6" value="idhenrik">
 						Identifiserer som Henrik
 					</label>
 					<br>
 					<label class="checkmark" for="ikkehenrik">
-						<input type="radio" id="ikkehenrik" name="question" value="ikkehenrik">
+						<input type="radio" id="ikkehenrik" name="question6" value="ikkehenrik">
 						Ikke Henrik
-					</label>
+					</label><br><br>
+					<input type="submit" id="henrikkjenner" value="Henrik-kjenner?">
 				</fieldset>
 			</div>
 
 			<input type="button" id="previous" value="<" onclick="newSlide(-1)">
 			<input type="button" id="next" value=">" onclick="newSlide(1)">
-			<input type="submit" id="henrikkjenner" value="Henrik-kjenner?">
-
 
 
 		</form>
