Jobba med innmelding og etymologi henrik auto-uttale

--- a/main/etymylogi.html
+++ b/main/etymylogi.html
@@ -10,7 +10,16 @@
 <body>
 	<article>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<p>Lorem ipsum dolor sit amet, consectetur <span onmouseover="uttal('Henrik-Norsk')">adipiscing</span> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p> Når man hovere over det sjuende ordet i Lorem Ipsum over uttaler nettsiden Henrik, gitt at brukeren har interactet med nettsiden.</p>
 	</article>
+	<div style="display: none">
+		<audio controls id="Henrik-Norsk">
+			<source src="media/sound_files/etymologi/Henrik-Norsk.mp3" type="audio/mp3">
+		</audio>
+		<!-- SETT INN MEIR AUDIO ELEMENT HER! BRUK SPAN I TEKSTEN MED mouseonover="uttal('tingen')", og sett iden her lik argumentet lik filnavnet-->
+	</div>
+	<script src="js/etymylogi.js"></script>
 	<script src="js/Header_and_Footer.js"></script>
 </body>
 </html>
