--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -10,9 +10,7 @@
 <body>
 	<article>
         <h2>Historiens viktigste Henriker</h2>  <!-- Gives warning with h1, change to h2 or move outside article works-->
-        <div class="slides">
-            
-        </div>
+
 
         <div class="slides">
             <h3>Henrik IV av det «Hellige» Tysk-«romerske» riket</h3>
@@ -71,8 +69,8 @@
                   Your browser does not support the audio element.
                   </audio> 
             </div>
-            <input type="submit" value= "forrige" class="prev" onclick="newSlide(-1)" >
-            <input type="submit" value= "neste" class="next" onclick="newSlide(1)" >
+            <input type="submit" value= "<" class="prev" onclick="newSlide(-1)" >
+            <input type="submit" value= ">" class="next" onclick="newSlide(1)" >
 
 
             <script src="js/historiske_henriker.js"></script>
