--- a/main/historiske_henriker.html
+++ b/main/historiske_henriker.html
@@ -69,9 +69,10 @@
                   Your browser does not support the audio element.
                   </audio> 
             </div>
-            <input type="submit" value= "<" class="prev" onclick="newSlide(-1)" >
-            <input type="submit" value= ">" class="next" onclick="newSlide(1)" >
-
+           
+            <input id="previous" type="submit" value= "<" class="prev" onclick="newSlide(-1)" >
+             <input id="next" type="submit" value= ">" class="next" onclick="newSlide(1)" >
+            <br><br> <br><br><br><br>
 
             <script src="js/historiske_henriker.js"></script>
 	</article>
